--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -9,6 +9,7 @@
 
     <RelativeLayout
         android:id="@+id/profileInformation"
+        android:background="@color/colorAccent"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
@@ -26,11 +27,14 @@
 
         <Button
             android:id="@+id/takePictureButton"
+            android:background="@color/colorPrimaryDark"
+            android:textColor="@color/colorPrimary"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/profilePicture"
             android:layout_alignParentStart="true"
-            android:layout_marginTop="13dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
             android:text="Take Profile Picture" />
 
         <RelativeLayout
@@ -40,6 +44,8 @@
 
             <Button
                 android:id="@+id/saveChangesButton"
+                android:background="@color/colorPrimaryDark"
+                android:textColor="@color/colorPrimary"
                 android:layout_width="150dp"
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
@@ -49,22 +55,27 @@
 
             <Button
                 android:id="@+id/logoutButton"
+                android:background="@color/colorPrimaryDark"
+                android:textColor="@color/colorPrimary"
                 android:layout_width="150dp"
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
                 android:layout_below="@id/saveChangesButton"
                 android:layout_marginTop="5dp"
+                android:layout_marginBottom="8dp"
                 android:text="Logout" />
 
 
             <EditText
-                android:id="@+id/username"
+                android:id="@+id/editUsername"
                 android:layout_alignStart="@+id/saveChangesButton"
+                android:textColorHint="@color/colorPrimary"
                 android:layout_width="wrap_content"
                 android:textSize="24dp"
+                android:textColor="@color/colorPrimary"
                 android:layout_height="wrap_content"
                 android:layout_alignParentTop="true"
-                android:layout_marginTop="38dp"
+                android:layout_marginTop="32dp"
                 android:hint="Username:"/>
 
             <TextView
@@ -72,14 +83,16 @@
                 android:layout_alignStart="@+id/saveChangesButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:textColor="@color/colorPrimary"
                 android:layout_marginTop="12dp"
-                android:layout_below="@id/username"
+                android:layout_below="@id/editUsername"
                 android:text="Followers:" />
 
             <TextView
                 android:id="@+id/following"
                 android:layout_alignStart="@+id/saveChangesButton"
                 android:layout_width="wrap_content"
+                android:textColor="@color/colorPrimary"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/followers"
                 android:text="Following:" />
@@ -101,7 +114,7 @@
     </RelativeLayout>
 
     <Button
-        android:id="@+id/AddFavorites"
+        android:id="@+id/addFavoritesButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Add Favorites" />
