--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -11,6 +11,7 @@
         android:id="@+id/profileInformation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@color/colorAccent"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true">
 
@@ -32,6 +33,8 @@
             <Button
                 android:id="@+id/editProfileButton"
                 android:layout_width="150dp"
+                android:textColor="@color/colorPrimary"
+                android:background="@color/colorPrimaryDark"
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="125dp"
@@ -39,16 +42,20 @@
 
             <Button
                 android:id="@+id/logoutButton"
+                android:textColor="@color/colorPrimary"
+                android:background="@color/colorPrimaryDark"
                 android:layout_width="150dp"
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
                 android:layout_below="@id/editProfileButton"
+                android:layout_marginBottom="12dp"
                 android:layout_marginTop="5dp"
                 android:text="Logout" />
 
 
             <TextView
-                android:id="@+id/username"
+                android:id="@+id/editUsername"
+                android:textColor="@color/colorPrimary"
                 android:layout_alignStart="@+id/editProfileButton"
                 android:layout_width="wrap_content"
                 android:textSize="24dp"
@@ -59,20 +66,22 @@
 
             <TextView
                 android:id="@+id/followers"
+                android:textColor="@color/colorPrimary"
                 android:layout_alignStart="@+id/editProfileButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="12dp"
-                android:layout_below="@id/username"
-                android:text="Followers:" />
+                android:layout_below="@id/editUsername"
+                android:text="Followers: 122" />
 
             <TextView
                 android:id="@+id/following"
+                android:textColor="@color/colorPrimary"
                 android:layout_alignStart="@+id/editProfileButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/followers"
-                android:text="Following:" />
+                android:text="Following: 357" />
         </RelativeLayout>
     </RelativeLayout>
     <RelativeLayout
