--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#FFFFFF</color>
-    <color name="colorPrimaryDark">#3700B3</color>
-    <color name="colorAccent">#000000</color>
+    <color name="colorPrimaryDark">#4A6572</color>
+    <color name="colorAccent">#232F34</color>
 </resources>
