--- a/app/src/main/res/layout/fragment_share_song.xml
+++ b/app/src/main/res/layout/fragment_share_song.xml
@@ -8,13 +8,14 @@
     android:orientation="vertical">
 
     <SearchView
+        android:id="@+id/searchSong"
         android:layout_width="wrap_content"
-        android:queryHint="Search For Music to Share"
         android:layout_height="wrap_content"
-        android:iconifiedByDefault="false"
         android:layout_alignParentTop="true"
         android:layout_gravity="center"
-        android:layout_marginTop="16dp" />
+        android:layout_marginTop="16dp"
+        android:iconifiedByDefault="false"
+        android:queryHint="Search For Music to Share" />
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -33,11 +34,11 @@
     </RelativeLayout>
 
     <EditText
+        android:id="@+id/postDescription"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:hint="Add Comment to Post:"
-        android:layout_gravity="center">
-    </EditText>
+        android:layout_gravity="center"
+        android:hint="Add Comment to Post:"></EditText>
 
     <Button
         android:id="@+id/shareButton"
