--- a/app/src/main/res/layout/post_model.xml
+++ b/app/src/main/res/layout/post_model.xml
@@ -17,7 +17,7 @@
         tools:srcCompat="@tools:sample/avatars" />
 
     <TextView
-        android:id="@+id/songTitle"
+        android:id="@+id/artistTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
