--- a/app/src/main/res/layout/item_song.xml
+++ b/app/src/main/res/layout/item_song.xml
@@ -10,7 +10,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="4dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="8dp"
         android:layout_toEndOf="@+id/albumCover"
         android:text="Song: "
         android:textSize="18dp"
@@ -47,9 +47,21 @@
         android:layout_below="@+id/artistTitle"
         android:layout_alignParentEnd="true"
         android:layout_marginStart="44dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="12dp"
         android:layout_marginEnd="43dp"
         android:layout_toEndOf="@+id/albumCover"
-        android:text="Add to Favorites" />
+        android:text="Favorite" />
+
+    <Button
+        android:id="@+id/shareSongButton"
+        android:layout_width="150dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/button"
+        android:layout_alignStart="@+id/button"
+        android:layout_alignEnd="@+id/button"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="4dp"
+        android:layout_marginEnd="0dp"
+        android:text="Share " />
 
 </RelativeLayout>
