--- a/app/src/main/res/layout/post_model.xml
+++ b/app/src/main/res/layout/post_model.xml
@@ -8,52 +8,58 @@
         android:id="@+id/postUsername"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Username">
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="12dp"
+        android:text="Username"
+        android:textSize="18dp">
 
     </TextView>
+
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="250dp">
+        android:layout_height="wrap_content">
 
         <ImageView
-            android:id="@+id/albumCover"
+            android:id="@+id/postImage"
             android:layout_width="150dp"
             android:layout_height="150dp"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
-            android:layout_marginStart="4dp"
-            android:layout_marginTop="20dp"
-            />
+            android:layout_marginStart="12dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp" />
 
         <TextView
-            android:id="@+id/songTitle"
+            android:id="@+id/postSongTitle"
             android:layout_width="wrap_content"
-            android:textSize="18dp"
-            android:textStyle="bold"
             android:layout_height="wrap_content"
-            android:layout_alignTop="@+id/albumCover"
+            android:layout_alignTop="@+id/postImage"
             android:layout_marginStart="8dp"
             android:layout_marginTop="0dp"
-            android:layout_toEndOf="@+id/albumCover"
-            android:text="TextView" />
+            android:layout_toEndOf="@+id/postImage"
+            android:text="TextView"
+            android:textSize="14dp"
+            android:textStyle="bold" />
 
         <TextView
-            android:id="@+id/artistName"
-            android:textSize="14dp"
+            android:id="@+id/postArtistName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/songTitle"
-            android:layout_alignStart="@+id/songTitle"
+            android:layout_below="@+id/postSongTitle"
+            android:layout_alignStart="@+id/postSongTitle"
             android:layout_marginStart="0dp"
             android:layout_marginTop="8dp"
-            android:text="TextView" />
+            android:text="TextView"
+            android:textSize="12dp" />
     </RelativeLayout>
 
     <TextView
         android:id="@+id/postDescription"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Caption">
+        android:layout_marginStart="8dp"
+        android:text="Caption"
+        android:textSize="14dp">
 
     </TextView>
 
