--- a/app/src/main/res/layout/item_favorite_song.xml
+++ b/app/src/main/res/layout/item_favorite_song.xml
@@ -21,6 +21,8 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="4dp"
         android:layout_marginTop="12dp"
+        android:textSize="16dp"
+        android:textStyle="bold"
         android:text="TextView"
         app:layout_constraintStart_toEndOf="@+id/favoriteSongAlbumCover"
         app:layout_constraintTop_toTopOf="@+id/favoriteSongAlbumCover" />
@@ -30,6 +32,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="4dp"
+        android:textSize="14dp"
         android:text="TextView"
         app:layout_constraintStart_toEndOf="@+id/favoriteSongAlbumCover"
         app:layout_constraintTop_toBottomOf="@+id/favoriteSongTitle" />
