--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -18,12 +18,13 @@
 
         <ImageView
             android:id="@+id/profilePicture"
-            android:layout_width="150dp"
-            android:layout_height="150dp"
+            android:layout_width="175dp"
+            android:layout_height="175dp"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="38dp"
+            android:scaleType="fitXY"
             tools:srcCompat="@tools:sample/avatars" />
 
         <RelativeLayout
