--- a/app/src/main/res/layout/post_model.xml
+++ b/app/src/main/res/layout/post_model.xml
@@ -2,22 +2,45 @@
 <LinearLayout android:orientation="vertical"
     android:layout_height="wrap_content"
     android:layout_width="match_parent"
+    android:layout_marginStart="8dp"
+    android:layout_marginEnd="8dp"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <TextView
-        android:id="@+id/postUsername"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="12dp"
-        android:text="Username"
-        android:textSize="22dp">
+   <RelativeLayout
+       android:layout_width="wrap_content"
+       android:layout_marginTop="16dp"
+       android:layout_marginBottom="4dp"
+       android:layout_height="40dp">
 
-    </TextView>
+       <ImageView
+           android:id="@+id/postUserProfileImage"
+           android:layout_width="40dp"
+           android:layout_height="40dp"
+           android:layout_marginStart="4dp"
+           android:scaleType="fitXY">
+
+       </ImageView>
+
+       <TextView
+           android:id="@+id/postUsername"
+           android:layout_width="match_parent"
+           android:layout_height="match_parent"
+           android:layout_marginStart="8dp"
+           android:layout_toEndOf="@+id/postUserProfileImage"
+           android:gravity="center_vertical"
+           android:text="Username"
+           android:textSize="18dp">
+
+       </TextView>
+
+   </RelativeLayout>
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_marginStart="4dp"
+        android:layout_marginEnd="4dp"
+        android:background="#eeeeee">
 
         <ImageView
             android:id="@+id/postImage"
