--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -35,24 +35,24 @@
             <Button
                 android:id="@+id/editProfileButton"
                 android:layout_width="150dp"
-                android:textColor="@color/colorPrimary"
-                android:background="@color/colorPrimaryDark"
-                android:layout_height="wrap_content"
+                android:layout_height="40dp"
                 android:layout_centerHorizontal="true"
-                android:layout_marginTop="125dp"
-                android:text="Edit Profile" />
+                android:layout_marginTop="130dp"
+                android:background="@drawable/round_shape_button"
+                android:text="Edit Profile"
+                android:textColor="@color/colorPrimary" />
 
             <Button
                 android:id="@+id/logoutButton"
-                android:textColor="@color/colorPrimary"
-                android:background="@color/colorPrimaryDark"
                 android:layout_width="150dp"
-                android:layout_height="wrap_content"
-                android:layout_centerHorizontal="true"
+                android:layout_height="40dp"
                 android:layout_below="@id/editProfileButton"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="8dp"
                 android:layout_marginBottom="12dp"
-                android:layout_marginTop="5dp"
-                android:text="Logout" />
+                android:background="@drawable/round_shape_button"
+                android:text="Logout"
+                android:textColor="@color/colorPrimary" />
 
 
             <TextView
