--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -6,17 +6,23 @@
     android:layout_height="match_parent"
     tools:context=".mainactivities.LoginActivity">
 
-    <EditText
+    <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/usernameField"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="64dp"
-        android:hint="Username:"
-        android:text="" />
+        android:hint="Username:">
 
-    <EditText
+        <com.google.android.material.textfield.TextInputEditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            />
+
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/passwordField"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
@@ -24,7 +30,16 @@
         android:layout_below="@id/usernameField"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="8dp"
-        android:inputType="textPassword" />
+        android:inputType="textPassword"
+        app:endIconMode="password_toggle">
+
+    <com.google.android.material.textfield.TextInputEditText
+        android:layout_width="match_parent"
+        android:inputType="textPassword"
+        android:layout_height="wrap_content"
+        />
+    </com.google.android.material.textfield.TextInputLayout>
+
 
     <Button
         android:id="@+id/loginButton"
