--- a/app/src/main/res/layout/fragment_other_user_profile.xml
+++ b/app/src/main/res/layout/fragment_other_user_profile.xml
@@ -23,7 +23,8 @@
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="38dp"
+            android:layout_marginTop="32dp"
+            android:layout_marginBottom="16dp"
             android:scaleType="fitXY"
             tools:srcCompat="@tools:sample/avatars" />
 
@@ -35,12 +36,12 @@
             <Button
                 android:id="@+id/followUserButton"
                 android:layout_width="150dp"
-                android:textColor="@color/colorPrimary"
-                android:background="@color/colorPrimaryDark"
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
-                android:layout_marginTop="125dp"
-                android:text="Follow User" />
+                android:layout_marginTop="132dp"
+                android:background="@drawable/round_shape_button"
+                android:text="Follow User"
+                android:textColor="@color/colorPrimary" />
 
 
 
