--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-
+<!--
         <SearchView
             android:id="@+id/searchSong"
             android:layout_width="300dp"
@@ -25,6 +26,19 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="0dp"
             android:layout_toEndOf="@+id/searchSong"></Spinner>
+            -->
+        <com.mancj.materialsearchbar.MaterialSearchBar
+            android:id="@+id/searchBar"
+            style="@style/MaterialSearchBarLight"
+            android:layout_width="350dp"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_centerInParent="true"
+            android:layout_marginTop="12dp"
+            app:mt_hint="Search:"
+            app:mt_maxSuggestionsCount="10"
+            app:mt_searchBarColor="#FAFAFA"
+            app:mt_speechMode="false" />
     </RelativeLayout>
 
     <TextView
